Create convention plugins